--- a/styles/scss/menu/_menu-navigation.scss
+++ b/styles/scss/menu/_menu-navigation.scss
@@ -1,23 +1,23 @@
 .menu-navigation {
-  position: fixed;
-  top: $navigation-height;
-  z-index: 1;
-  background-color: $background-color;
-  background-color: rgba(0, 0, 0, 0.7);
-  border-right: 1px solid $border-color;
-
-  width: 100%;
-  max-height: calc(100vh - #{$navigation-height});
   overflow-y: auto;
   font-size: 25px;
-  text-transform: uppercase;
-  min-width: 250px;
   color: $navigation-color;
-
-  max-height: calc(100vh - #{$navigation-height});
+  min-width: 280px;
   overflow-y: auto;
 
+  font-weight: bold;
+
+  h1 {
+    text-align: center;
+    font-weight: bold;
+    color: $red;
+    margin: 10px;
+    font-size: 40px;
+  }
+
   ul {
+    font-family: $font-3;
+    letter-spacing: 1px;
     height: 100%;
     list-style-type: none;
     display: flex;
@@ -27,14 +27,23 @@
     width: 100%;
 
     a {
+      white-space: nowrap;
+      flex-grow: 1;
       display: block;
-      padding: 20px 20px;
+      padding: 5px 0px;
       cursor: pointer;
     }
 
     a.active {
-      // border-bottom: 1px solid $border-color;
-      color: $gold;
+      color: $green2;
     }
+  }
+
+  li {
+    display: flex;
+  }
+
+  .icon {
+    max-width: 30px;
   }
 }
