--- a/styles/scss/menu/_menu-card.scss
+++ b/styles/scss/menu/_menu-card.scss
@@ -1,145 +1,25 @@
 .menu-card {
   min-height: 100vh;
   overflow-y: auto;
-  padding-top: $menu-card-padding-top;
-  background-attachment: fixed;
-  background-size: cover;
-
-  background-color: $background-color;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: $regular-font-color;
+  padding-top: 95px;
 
   display: flex;
   flex-direction: column;
 
-  //#region basic
-  .menu-item {
-    display: flex;
-    width: 100%;
-    max-width: 400px;
-    background-color: $menu-item-background;
-    background-color: rgba(0, 0, 0, 0.7);
-
-    margin-bottom: $menu-item-margin-bottom;
-    border: 1px solid $border-color;
-    font-size: $regular-font-size;
-
-    .numer {
-      margin-right: 10px;
-    }
-
-    .info {
-      margin-right: 10px;
-    }
-
-    .price {
-      margin-left: auto;
-      white-space: nowrap;
-    }
-
-    .buy {
-      margin-left: 10px;
-      button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        justify-self: flex-end;
-
-        margin-left: 10px;
-
-        height: $buy-button-size;
-        width: $buy-button-size;
-
-        border-style: none;
-        // border-radius: 50%;
-
-        background-color: $buy-button-background-color;
-
-        color: $buy-button-color;
-        font-size: $buy-button-font-size;
-
-        transition: 0.6s;
-      }
-    }
-  }
-
-  p {
-    margin: 0;
-  }
-
-  //#endregion
-
-  .wrapper {
-    position: relative;
-
-    width: 100%;
-    background-color: $wrapper-color;
-    padding: 20px;
-  }
-
-  h2 {
-    color: $header-font-color;
-    font-size: $header-font-size;
-    margin-bottom: $h2-margin-botton;
-    margin-top: 0;
-    text-transform: uppercase;
-  }
-  .wrapper {
-    max-height: calc(100vh - #{$navigation-height});
-    overflow-y: auto;
-  }
   .categories {
-    display: flex;
-    flex-wrap: wrap;
     width: 100%;
-    align-content: center;
-    justify-content: space-around;
-    justify-items: space-between;
-  }
-
-  .categories {
-    padding-top: 0;
-  }
-
-  .category {
-    width: 100%;
+    margin-top: 75px;
   }
 
   .menu-items {
-    display: flex;
-    // justify-content: space-between;
-    flex-wrap: wrap;
-    flex-direction: row;
-  }
-
-  .menu-item {
-    margin: 0 auto;
-    padding: $menu-item-paddings;
-    align-items: center;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: 10px;
-  }
-  .image {
-    width: 100%;
-    overflow: hidden;
-    border-radius: 5px;
-    img {
-      display: block;
-      margin: 0 auto;
-      max-width: 100%;
-    }
+    align-items: stretch;
   }
 
-  .info {
-    width: 100%;
-    margin: 20px 0;
-  }
-  .details {
-    color: $small-font-color;
-    font-size: $small-font-size;
-  }
+  @import "menu-item";
+
   .category {
     display: none;
     animation: animatedOpacity 0.5s both reverse;
@@ -149,13 +29,13 @@
       animation: animatedOpacity 0.5s both;
     }
   }
-}
 
-@keyframes animatedOpacity {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
+  @keyframes animatedOpacity {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
   }
 }
