--- a/styles/scss/menu/_navigation.scss
+++ b/styles/scss/menu/_navigation.scss
@@ -1,23 +1,32 @@
 .navigation {
   position: fixed;
+  z-index: 2;
   top: 0;
   left: 0;
   width: 100%;
-  display: flex;
-  justify-content: center;
-  border-bottom: 1px solid $border-color;
-  box-shadow: $navigation-box-shadow;
-  height: $navigation-height;
-  padding: $navigation-paddings;
-  background-color: $navigation-background-color;
-  background-color: rgba(0, 0, 0, 0.7);
-  color: $navigation-color;
-  z-index: 2;
-  align-items: center;
+  padding: 20px;
+
+  .wrapper {
+    display: flex;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 1);
+    border-radius: 10px;
+    color: $navigation-color;
+    align-items: center;
+    padding: $navigation-vertical-padding 20px;
+  }
+
+  h1 {
+    display: none;
+    font-weight: bold;
+    letter-spacing: 1px;
+    font-size: 28px;
+    margin: 0;
+    padding: 0;
+  }
 
   svg {
     font-size: $navigation-icon-size;
-    margin-right: 10px;
     color: white;
 
     &:hover {
@@ -27,13 +36,42 @@
 
   .logo {
     margin-right: auto;
-    max-width: 75px;
+    max-width: $navigation-logo-size;
     img {
       max-width: 100%;
     }
   }
 
-  .user {
+  .icons {
+    display: flex;
     margin-left: auto;
+    margin-right: 40px;
+  }
+
+  .user {
+    margin-right: 15px;
+  }
+
+  .total {
+    position: relative;
+    right: -50%;
+
+    background-color: $red;
+    padding: 2px 4px;
+    border-radius: 5px;
+  }
+
+  .user,
+  .basket {
+    button {
+      border-radius: 50%;
+      border: 1px solid white;
+      height: 40px;
+      width: 40px;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
 }
