--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -386,7 +386,7 @@ input[type="submit"] {
 .menu {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background-image: url("../../../images/background.jpg");
+  background-image: url("../../images/background.jpg");
   background-attachment: fixed;
   background-size: cover;
   min-height: calc(100vh -20px);
