--- a/styles/scss/menu/_menu.scss
+++ b/styles/scss/menu/_menu.scss
@@ -12,7 +12,7 @@
 
   box-sizing: border-box;
 
-  background-image: url("../../../images/background.jpg");
+  background-image: url("../../images/background.jpg");
   background-attachment: fixed;
   background-size: cover;
   min-height: calc(100vh -20px);
