--- a/styles/scss/menu/_menu.scss
+++ b/styles/scss/menu/_menu.scss
@@ -18,6 +18,8 @@
   min-height: calc(100vh -20px);
 
   padding: 10px 20px;
-
+  max-width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
   // background-color: black;
 }
