--- a/styles/scss/menu/_navigation.scss
+++ b/styles/scss/menu/_navigation.scss
@@ -2,9 +2,11 @@
   position: fixed;
   z-index: 2;
   top: 0;
-  left: 0;
+  left: 50%;
   width: 100%;
+  max-width: 1280px;
   padding: 20px;
+  transform: translateX(-50%);
 
   .wrapper {
     display: flex;
