--- a/styles/scss/menu/_menu-item.scss
+++ b/styles/scss/menu/_menu-item.scss
@@ -43,6 +43,8 @@
     border: 1px solid $green2;
     border-radius: 10px;
     padding: 5px;
+    width: 100%;
+    max-width: 100%;
 
     display: flex;
     color: white;
@@ -61,6 +63,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    min-width: 37.59%;
 
     img {
       max-width: 100%;
@@ -72,7 +75,7 @@
     display: flex;
     flex-wrap: wrap;
     align-content: space-between;
-    width: 100%;
+    max-width: 62.41%;
   }
 
   .info,
