--- a/styles/scss/menu/_menu-navigation.scss
+++ b/styles/scss/menu/_menu-navigation.scss
@@ -2,7 +2,7 @@
   overflow-y: auto;
   font-size: 25px;
   color: $navigation-color;
-  min-width: 280px;
+  min-width: 25.51%;
   overflow-y: auto;
 
   font-weight: bold;
@@ -11,7 +11,7 @@
     text-align: center;
     font-weight: bold;
     color: $red;
-    margin: 10px;
+    margin: 20px 0;
     font-size: 40px;
   }
 
