--- a/styles/scss/menu/_menu-item.scss
+++ b/styles/scss/menu/_menu-item.scss
@@ -1,5 +1,5 @@
 .menu-item {
-  width: 100%;
+  width: 50%;
   padding: 2px;
 
   &.active {
@@ -76,6 +76,7 @@
     flex-wrap: wrap;
     align-content: space-between;
     max-width: 62.41%;
+    width: 100%;
   }
 
   .info,
@@ -157,6 +158,21 @@
         fill: white;
       }
     }
+  }
+
+  .alergen {
+    text-align: center;
+    font-family: $font-1;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 10px;
+    height: 18px;
+    width: 18px;
+
+    border: 1px solid white;
+    border-radius: 50%;
   }
 
   .details {
